# Facial-Exprssion-Recognition-using-keras

./: .gitignore  README.md  facial_expression3.ipynb  pyproject.toml  requirements.txt  test1_using_webcam.py  train1.py
configs/: example_experiment.yaml
scripts/: train.py  webcam_demo.py
src/facial_expression_recognition/: __init__.py  __main__.py  cli.py  config.py  data.py  inference.py  model.py  training.py
