[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "facial-expression-recognition"
version = "0.1.0"
description = "Training and inference tools for facial expression recognition built with TensorFlow/Keras."
authors = [{ name = "Project Contributors" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["computer vision", "tensorflow", "keras", "facial expressions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/"
Repository = "https://github.com/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

